# curi_description

./: CMakeLists.txt  package.xml
srdf/: curi_pinocchio.srdf
urdf/: curi_pinocchio.urdf
